# bondefi

./: .prettierignore  .yarnrc.yml  README.md  docker-compose-smoke-test.yml  docker-compose.yml  package.json
contract/: Cargo.toml
contract/src/: bonding_curve.rs  lib.rs  token.rs  token_manager.rs  token_sale_manager.rs
contract/src/transactions/: presale_nft_mint.rs
contract/tests/: bondig_curve_test.rs  lib.rs
contract/transaction_manifest/: create_token.rtm
evm/: README.md  hardhat.config.ts  hardhat.tasks.ts  package.json  secrets.json.template
evm/contracts/: ERC20Token.sol
evm/contracts/bancor-formula/: BancorFormula.sol  IBancorFormula.sol
evm/contracts/bancor-formula/utils/: Utils.sol
evm/contracts/launchpad/: Launchpad.sol  Purchase.sol  PurchaseFactory.sol
evm/contracts/launchpad/uniswap/: PoolManager.sol  UniswapV3LiquidityManager.sol
evm/contracts/market-maker/: BatchedMarketMaker.sol
evm/contracts/test/: TestDAI.sol  TestToken.sol
evm/contracts/test/uniswap/: MockContract.sol
evm/scripts/: deploy-all.ts  deploy-bancor.ts  deploy-launchpad.ts  deploy-liquidity-manager.ts  deployments.ts  overwriteTransaction.ts  verify.ts
evm/test/bancor-formula/: BancorFormula.test.ts  bancor-formula.test.ts
evm/test/fixtures/: launch-details.ts  mock-contract.ts
evm/test/launchpad/: launchpad.test.ts
evm/test/market-maker/: batched-market-maker.test.ts
scripts/: prepare
videos/: README.md
webapp/: .env  .env.sample  .eslintrc.json  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
webapp/src/app/: connectkit.tsx  globals.css  layout.tsx  page.tsx
webapp/src/app/dashboard/: page.tsx
webapp/src/app/demo/: page.tsx
webapp/src/app/lib/: bounding-curve.ts
webapp/src/app/project/: featured-projects-mock.tsx  page.tsx
webapp/src/app/token/: page.tsx
webapp/src/components/: bento.tsx  bonding.tsx  datepicker.tsx  footer.tsx  header.tsx  hero.tsx  partners.tsx  radix.tsx  roadmap.tsx  sidebar.tsx  team.tsx  text-reveal.tsx  token-card.tsx  token-slider.tsx
webapp/src/components/magicui/: dock.tsx  text-reveal.tsx
webapp/src/components/ui/: network-selector.tsx
webapp/src/lib/: bonding-curve.ts  bounding-curve.ts  reserve-tokens.ts  utils.ts
webapp/src/lib/evm/: token-addresses.ts  use-erc20.ts  use-evm-launchpad.ts
webapp/src/lib/radix/: connect-button.tsx  index.ts  service.ts  utils.ts
webapp/src/typechain-types/: hardhat.d.ts  index.ts
webapp/src/typechain-types/contracts/: ERC20Token.ts  index.ts
(+273 files in other folders)
